Cleanup Worker as field usage